--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "RadTTD"]
 	path = RadTTD
 	url = git@github.com:YanchunHe/RadTTD.git
-[submodule "Radionuclides"]
-	path = Radionuclides
-	url = git@github.com:YanchunHe/Radionuclides.git
+[submodule "RadData"]
+	path = RadData
+	url = git@github.com:YanchunHe/RadData.git
 [submodule "BIR"]
 	path = BIR
 	url = git@github.com:YanchunHe/BIR.git
